src/objects/Contact_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Trail</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact History (Contact History)</relationshipLabel>
        <relationshipName>Contact_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Diagnosis__c</fullName>
        <label>Date of Diagnosis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Key Health Issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis_made_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diagnosis made by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact History</relationshipLabel>
        <relationshipName>Contact_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <label>Firstname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>MailingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>MailingCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>MailingPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>MailingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_User_aware_of_diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service User aware of diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialist_Communication_Needs__c</fullName>
        <label>Specialist Communication Needs</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact History</label>
    <nameField>
        <label>Contact History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>